--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,59 +1,19 @@
 spring:
   application:
-    name: template
+    name: template # 애플리케이션 이름
   profiles:
-    active: local
+    active: local # 기본 활성 프로파일 (변경 가능)
+
   datasource:
     hikari:
       driver-class-name: com.mysql.cj.jdbc.Driver
       pool-name: core-db-pool
-      maximum-pool-size: 3
-      connection-timeout: 10000
-      max-lifetime: 60000
 
   jpa:
-    open-in-view: false
-    generate-ddl: false
-    show-sql: false
+    open-in-view: false # Open EntityManager 설정 비활성화
     hibernate:
-      ddl-auto: none
-    properties:
-      hibernate.timezone.default_storage: NORMALIZE_UTC
-      hibernate.jdbc.time_zone: UTC
-
----
-spring.config.activate.on-profile: local
-
-spring:
-  datasource:
-    hikari:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://localhost:3306/testdb?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8
-      username: testuser
-      password: testpass
-      pool-name: core-db-pool
-      maximum-pool-size: 10
-      minimum-idle: 2
-      idle-timeout: 10000
-      max-lifetime: 30000
-      connection-timeout: 20000
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: none
+      ddl-auto: none # DDL 자동 실행 비활성화
     properties:
       hibernate:
-        timezone.default_storage: NORMALIZE_UTC
-        jdbc.time_zone: UTC
-        format_sql: true
-        show_sql: true
-
-  data:
-    redis:
-      port: 6379
-      host: localhost
-
-  flyway:
-    enabled: true
-    baseline-on-migrate: true
-    locations: classpath:db/migration
+        timezone.default_storage: NORMALIZE_UTC # Hibernate 기본 타임존 저장 방식
+        jdbc.time_zone: UTC # JDBC 타임존 설정
