--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,107 @@
 spring:
   application:
     name: template # 애플리케이션 이름
+  profiles:
+    default: local # 기본 활성 프로파일 설정
+
   datasource:
     hikari:
       driver-class-name: com.mysql.cj.jdbc.Driver
       pool-name: core-db-pool
 
   jpa:
-    open-in-view: false # Open EntityManager 설정 비활성화
+    open-in-view: false
     hibernate:
-      ddl-auto: none # DDL 자동 실행 비활성화
+      ddl-auto: none
     properties:
       hibernate:
-        timezone.default_storage: NORMALIZE_UTC # Hibernate 기본 타임존 저장 방식
-        jdbc.time_zone: UTC # JDBC 타임존 설정
+        timezone.default_storage: NORMALIZE_UTC
+        jdbc.time_zone: UTC
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: local
+
+  datasource:
+    hikari:
+      jdbc-url: jdbc:mysql://localhost:3306/testdb?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8
+      username: testuser
+      password: testpass
+      maximum-pool-size: 10
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    baseline-version: 1
+    clean-disabled: false
+    locations: classpath:db/migration
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: dev
+
+  datasource:
+    hikari:
+      jdbc-url: jdbc:mysql://localhost:3306/testdb?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8
+      username: testuser
+      password: testpass
+      maximum-pool-size: 10
+      minimum-idle: 2
+      connection-timeout: 30000
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+  jpa:
+    show-sql: false
+
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    baseline-version: 1
+    clean-disabled: true
+    locations: classpath:db/migration
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: prod
+
+  datasource:
+    hikari:
+      jdbc-url: jdbc:mysql://prod-database-host:3306/proddb?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8
+      username: produser
+      password: prodpass
+      maximum-pool-size: 20
+      minimum-idle: 5
+      connection-timeout: 5000
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+  jpa:
+    show-sql: false
+
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    baseline-version: 1
+    clean-disabled: true
+    locations: classpath:db/migration
